[package]
name = "throttle-timer"
version = "0.0.4"
authors = [ "Ben McDonald <mcdonald.ben@gmail.com>" ]
edition = "2018"
keywords = ["throttle", "timer"]
description = "Throttle events and record event stats with a simple library"
repository = "https://github.com/benjaminmcdonald/rust-throttle_timer"
homepage = "https://github.com/benjaminmcdonald/rust-throttle_timer"
license = "Apache-2.0 OR MIT"
